@@ -22,77 +22,83 @@
 |   This is a string attribute for PersistentObject                         |
 |                                                                           |
 |   Changelog :                                                             |
-|               09/26/2007 - Paf - Initial release                          |
-|               10/03/2007 - Paf - Add some operators                       |
-|                                - Put definitions in string.cpp            |
+|               10/03/2007 - Paf - Initial release                          |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
 
-
-#ifndef __STRING_H__
-#define __STRING_H__
+#include "../include/string.h"
 
 
-#include "iattribute.h" 
-#include "scalar.h" 
-#include <string> 
 
-using namespace std;
-using namespace boost;
+namespace Gnoll {
 
-namespace Gnoll
-{
-	namespace Core
-	{
+	namespace Core {
 
 		/**
-		 *	This is a simple attribute. 
-		 */ 
-		class String : public Scalar<string>
+		 * Constructor
+		 * @param _value Initialiazion of the String value
+		 */
+		String::String(string _value) : Scalar<string>("string", _value)
 		{
-			public:
+		}
+
+
+		/**
+		 * Destructor
+		 */
+		String::~String()
+		{
+		}
+
+
+		/**
+		 * This method deserialize the object. <br/>
+		 * This method initializes this object thanks to a XML tree given as a parameter. <br/>
+		 * It has to be implemented by all classes that inherits from this class.
+		 *
+	  	 * @param _element This is the XML tree containing the state of this object
+		 */
+		void String::deSerializeXML( xmlpp::Element* _element ) 
+		{
+				
+			if (_element == NULL)
+			{
+				return;
+			}
+
+			xmlpp::Attribute* attr = _element->get_attribute("value");
+
+			if (attr == NULL)
+			{
+				return;
+			}
+
+			this->setValue(attr->get_value());
 	
-				/**
-		   	 * Constructor
-				 * @param _value Initialiazion of the String value
-				 */
-				String(string _value = "");
+		};		
 
 
-				/**
-				 * Destructor
-				 */
-				virtual ~String();
+		/**
+		 * Overloading of the conversion string -> String operator
+		 * @param _rValue Value to convert from
+		 * @return Converted value 
+		 */
+	 	Scalar<string> const & String::operator=(string _rValue)
+		{
+			this->setValue(_rValue);
+			return *this;
+		}
 
 
-				/**
-				 * This method deserialize the object. <br/>
-				 * This method initializes this object thanks to a XML tree given as a parameter. <br/>
-				 * It has to be implemented by all classes that inherits from this class.
-				 *
-			  	 * @param _element This is the XML tree containing the state of this object
-				 */
-				virtual void deSerializeXML( xmlpp::Element* _element );
-
-
-				/**
-				 * Overloading of the conversion string -> String operator
-				 * @param _rValue Value to convert from
-				 * @return Converted value 
-				 */
-			 	virtual Scalar<string> const &operator=(string _rValue);
-
-
-				/**
-				 * Overloading of the conversion String -> string operator
-				 * @return Converted value 
-				 */
-		  		virtual operator string();
-
-
-
-		};
+		/**
+		 * Overloading of the conversion String -> string operator
+		 * @return Converted value 
+		 */
+  		String::operator string()
+		{
+			return this->getValue();
+		}
 
 
 		/**
@@ -100,7 +106,10 @@ namespace Gnoll
 		 * @param _stream Stream to insert the value to
 		 * @return Stream
 		 */
-		ostream &operator<<(ostream & _stream, String const & _str);
+		ostream &operator<<(ostream & _stream, String const & _str)
+		{
+			return  _stream << _str.getValue();
+		}
 
 
 		/**
@@ -108,9 +117,22 @@ namespace Gnoll
 		 * @param _stream Streaim to extract the value from
 		 * @return Stream
 		 */
-		istream &operator>>(istream &_stream, String &_str);
+		istream &operator>>(istream &_stream, String &_str)
+		{
+
+			string value;
+			if (_stream >> value)    
+			{
+				_str.setValue(value);
+			}
+
+			return _stream;
+		}
+
 
 	}
 }
 
-#endif // __STRING_H__
+
+
+
